--- a/asssets/css/header.css
+++ b/asssets/css/header.css
@@ -9,12 +9,12 @@ header,
     align-items: center;
     justify-content: space-between;
     height: 80px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     max-width: 1024px;
     z-index: 99;
     position: fixed;
     width: 100%;
-    background: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+    background-color: white;
 }
 
 .mobile-header {
@@ -22,7 +22,6 @@ header,
     align-items: center;
     justify-content: space-between;
     height: 80px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     max-width: 1024px;
     z-index: 99;
     display: none;
@@ -51,6 +50,7 @@ header,
     max-width: 1024px;
     width: 100%;
     z-index: 99;
+    position: fixed;
 }
 
 .burger-menu-outer-container {
@@ -96,12 +96,20 @@ header,
     #burger-menu {
         margin-top: 80px;
     }
+
+    .mobile-login-users {
+        height: 100vh;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 @media (min-width:1024px) {
     #background-container {
         max-width: 100%;
-        top: 80px;
+        padding-top: 80px;
         z-index: 99;
     }
 
