--- a/asssets/templates/web_header.html
+++ b/asssets/templates/web_header.html
@@ -5,8 +5,10 @@
     <div onclick="closeBurgerMenu()" id="web-header" class="web-header">
         <span>Kanban Project Mangement Tool</span>
         <div class="img-container">
-            <img onclick="location.href='./help.html'" class="question-icon" src="./asssets/img/question_icon.svg" alt="">
-            <img id="person-img" onclick="burgerMenuWithCallback()" class="person" src="./asssets/img/person.svg" alt="">
+            <img onclick="location.href='./help.html'" class="question-icon" src="./asssets/img/question_icon.svg"
+                alt="">
+            <img id="person-img" onclick="burgerMenuWithCallback()" class="person" src="./asssets/img/person.svg"
+                alt="">
         </div>
     </div>
     <div onclick="closeBurgerMenu()" id="background-container">
@@ -23,7 +25,7 @@
         <div id="nav-bar" onclick="closeBurgerMenu()" class="logo-container">
             <img class="logo-white" src="./asssets/img/Join_logo_white.svg" alt="">
         </div>
-        <nav  id="nav-bar" onclick="closeBurgerMenu()">
+        <nav id="nav-bar" onclick="closeBurgerMenu()">
             <div class="nav-link-container">
                 <div onclick="location.href='./summary.html'">
                     <img class="icon" src="./asssets/img/Summary_icon_grey.svg" alt="">
