--- a/asssets/css/footer.css
+++ b/asssets/css/footer.css
@@ -40,9 +40,7 @@ footer {
 }
 
 .icon {
-    padding-top: 14.5px;
     height: 22px;
-    padding-bottom: 6px;
     cursor: pointer;
 }
 
@@ -82,6 +80,11 @@ footer {
 @media (max-width: 1024px) {
     footer {
         display: flex;
+    }
+    .icon {
+        padding-top: 14.5px;
+        padding-bottom: 6px;
+
     }
 }
 
