--- a/asssets/css/web_header.css
+++ b/asssets/css/web_header.css
@@ -43,7 +43,6 @@ nav div div {
 
 .logo-container {
     display: flex;
-    justify-content: center;
 }
 
 .logo-white {
@@ -64,6 +63,12 @@ nav div div {
     gap: 24px;
     display: flex;
     flex-direction: column;
+    width: 232px;
+}
+
+.nav-link-container div {
+    padding-left: 54px;
+    height: 46px;
 }
 
 .icon {
@@ -82,6 +87,8 @@ nav div div {
     min-width: 790px;
     padding-left: 232px;
     background: white;
+    z-index: 80;
+    top: 0;
 }
 
 .web-header span {
