--- a/asssets/templates/web_header.html
+++ b/asssets/templates/web_header.html
@@ -7,7 +7,7 @@
         <div class="img-container">
             <img onclick="location.href='./help.html'" class="question-icon" src="./asssets/img/question_icon.svg"
                 alt="">
-            <img id="person-img" onclick="burgerMenuWithCallback()" class="person" src="./asssets/img/person.svg"
+            <img id="person-img" onclick="burgerMenu()" class="person" src="./asssets/img/person.svg"
                 alt="">
         </div>
     </div>
