--- a/asssets/css/cover_page.css
+++ b/asssets/css/cover_page.css
@@ -10,4 +10,33 @@ body {
     max-width: 1024px;
     width: 100%;
     height: 100vh;
+    background-image: url(/asssets/img/Join_logo_white.svg );
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 334px 274px;
+    animation: slideAndFade 1650ms linear;
+    position: relative;
+    z-index: 2;
+}
+
+@media(min-width:1024px) {
+    .first-page-logo-container {
+        max-width: 100%;
+        background-color: white;
+        background-image: url(/asssets/img/mobile-login-logo-dark.svg );
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+}
+
+@keyframes slideAndFade {
+    45% {
+        background-position: center;
+        opacity: 1;
+    }
+
+    100% {
+        background-position: left top;
+        opacity: 0;
+    }
 }
