--- a/asssets/css/contact_media.css
+++ b/asssets/css/contact_media.css
@@ -5,6 +5,10 @@
         width: 80px;
     }
 
+    .new-contact-container-frame{
+        justify-content:flex-end;
+    }
+
     .big-name{
         font-size: 36px;
     }
@@ -130,6 +134,10 @@
         background: rgba(0, 0, 0, 0.5);
     }
 
+    .input-field-top {
+        margin-top: 148px;
+    }
+
     .edit-contact-frame{
         max-width: 850px;
         display: flex;
@@ -145,11 +153,10 @@
     }
 
     .edit-contact-head{
-        min-width: 323px;
+        min-width: 373px;
         border-radius: 20px  0 0 20px;
         margin-left: 16px;
         height: 594px;
-        /* width: 44%; */
         flex: 0.9 1 auto;
     }
 
@@ -160,7 +167,7 @@
         align-items: center;
         border-radius: 0 20px 20px 0;
         height: 594px;
-        min-width: 400px;
+        min-width: 350px;
         flex: 1.5 1 auto;
     }
 
@@ -182,13 +189,13 @@
 
     .close-x-dark{
         display: block !important;
-        margin-top: -96px;
+        margin-top: -100px;
         margin-right: 16px;
     }
     
     .join-logo-white{
         display: block !important;
-        margin-top: 224px;
+        margin-top: 174px;
         margin-left: 34px;
     }
 
@@ -212,6 +219,7 @@
     height: 39px;
     border-radius: 10px;
     margin-top: 56px;
+    margin-left: 18px;
     cursor: pointer;
     padding: 0 08px;
     }
@@ -221,7 +229,7 @@
     }
 
     .create-contact{
-        margin-right: 16px;
+        margin-left: 18px;
     }
 
     h1{
@@ -248,7 +256,7 @@
       }
 }
 
-@media(min-width: 940px){
+@media(min-width: 980px){
 
     h1{
         font-size: 47px;
@@ -256,6 +264,10 @@
 
     .edit-contact-head{
         width: 353px;
+    }
+
+    .create-contact{
+        margin-right: 24px;
     }
 
     .contact-logo-bigger{
@@ -268,7 +280,11 @@
 
     .add-contact-bottom, .edit-contact-bottom{
         flex-direction: row;
-        min-width: 550px;
+        min-width: 510px;
+    }
+
+    .close-x-dark{
+        margin-top: -96px;
     }
 }
 
