--- a/asssets/css/contacts.css
+++ b/asssets/css/contacts.css
@@ -121,7 +121,7 @@ color: black;
 .new-contact-container-frame{
     margin-top: 96px;
     display: flex;
-    justify-content:flex-end;
+    justify-content:center;
 }
 
 .new-contact-container {
@@ -504,9 +504,15 @@ form{
     width: 182px;
     height: 41px;
     background: #2A3647;
+    border: 1px solid #2A3647;
     border-radius: 10px;
     margin-top: 56px;
     cursor: pointer;
+}
+
+.create-contact-text{
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .check-white{
