--- a/asssets/css/contact_media.css
+++ b/asssets/css/contact_media.css
@@ -135,7 +135,11 @@
     }
 
     .input-field-top {
-        margin-top: 148px;
+        margin-top: 110px;
+    }
+
+    .input-top-edit{
+        margin-top: 96px;
     }
 
     .edit-contact-frame{
@@ -219,7 +223,7 @@
     height: 39px;
     border-radius: 10px;
     margin-top: 56px;
-    margin-left: 18px;
+    /* margin-left: 18px; */
     cursor: pointer;
     padding: 0 08px;
     }
@@ -267,7 +271,7 @@
     }
 
     .create-contact{
-        margin-right: 24px;
+        margin-right: 18px;
     }
 
     .contact-logo-bigger{
@@ -275,12 +279,12 @@
     }
 
     .input-field, .input-field-top{
-        max-width: 322px;
+        max-width: 300px;
     }
 
     .add-contact-bottom, .edit-contact-bottom{
         flex-direction: row;
-        min-width: 510px;
+        min-width: 515px;
     }
 
     .close-x-dark{
