--- a/asssets/css/add_task.css
+++ b/asssets/css/add_task.css
@@ -306,6 +306,10 @@ input[type="date"]::before {
   width: 16px;
 }
 
+#delete-subtask {
+  margin-left: 20px;
+}
+
 .select-one img {
   
   margin-right: 10px;
@@ -459,7 +463,7 @@ border-top: none;
 }
 
 .task-added-container {
-    display: flex;
+    display: none;
     justify-content: center;
 }
 
@@ -485,6 +489,15 @@ border-top: none;
   margin-left: 26px;
   width: 26px;
   height: 22px;
+}
+
+@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .cancel-btn-desktop {
