--- a/asssets/css/add_task_popUp.css
+++ b/asssets/css/add_task_popUp.css
@@ -1,13 +1,15 @@
 .wrapper {
     display: flex;
     flex-direction: column;
+    margin-top: 63px;
 
   }  
 
-  .site-title {
-    display: flex;
-    flex-direction: column;
-    width: 975px;
+  
+
+h1 {
+  font-size: 47px;
+  font-weight: 700;
 }
 
 .select-one {
@@ -28,6 +30,7 @@
   .inner-wrap {
     display: flex;
     justify-content: center;
+    margin-top: 41px;
    }
 
   .all-input, textarea {
@@ -435,6 +438,13 @@
     width: 26px;
     height: 22px;
   }
+
+  .btn-div {
+    display: flex;
+    position: absolute;
+    top: 500px;
+    right: 0
+  }
   
   .cancel-btn-desktop {
     display: flex;
@@ -451,9 +461,6 @@
     font-size: 21px;
     height: 55px;
     width: 136px;
-    position: absolute;
-    left: 0;
-    top: 500px;
     transition: 125ms ease-in-out;
   }
 
@@ -486,10 +493,8 @@
     font-size: 21px;
     height: 55px;
     width: 187px;
-    position: absolute;
-    right: 0;
-    top: 500px;
     transition: 125ms ease-in-out;
+    margin-left: 20px;
   }
 
   .create-btn-desktop:hover {
@@ -502,13 +507,175 @@
     margin-left: 16px
   }
 
-  @media(min-width:768px) {
+  .site-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .site-title img {
+    width: 28px;
+  }
+
+  #delete-subtask {
+    margin-left:20px
+  }
+
+  #selected-image {
+    display: none;
+  }
+
+  .task-added-container {
+    display: none;
+    justify-content: center;
+}
+
+#task-added {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 72%;
+  color: #fff;
+  background-color: #2A3647;
+  border-radius: 20px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-right: 30.5px;
+  padding-left: 30.5px;
+  z-index: 9999;
+}
+
+#task-added span {
+  font-size: 21px;
+}
+
+#task-added img {
+  margin-left: 26px;
+  width: 26px;
+  height: 22px;
+}
+
+@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(500%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+  @media (max-width: 900px) and (min-width: 280px) {
+    .inner-wrap {
+      display: block;
+      width: 100%;
+    }
+
+    /* .popup-overlay.active {
+      opacity: 0;
+      visibility: hidden;
+      
+  } */
+
+   
+
+    #prio-buttons {
+      flex-wrap: wrap;
+    }
+    .site-title {
+      width: 100%;
+    }
+    .wrapper {
+      width: 100%;
+      margin: 31px;
+    }
+    .section-one {
+      width: 100%;
+     }
+  
+     .section-two {
+      width: 100%;
+      padding-left: 0;
+      position: relative;
+     }
+
+     .header-popup {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #FFFFFF;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+      position: fixed;
+      top: 0;
+      width: 100%;
+      height: 80px;
+      padding: 0 10px;
+      z-index: 100;
+
+    }
+
+    .cancel-btn-desktop {
+      display: none;
+    }
+    .create-btn-desktop {
+      display: none;
+    }
+
+    header {
+      z-index: 90;
+    }
+    
+    
+    
+    .small-logo {
+      width: 32px;
+      height: 39px;
+      margin-left: 25px;
+      margin-top:20px;
+      margin-bottom:20px;
+    }
+    
+    
+    
+    #create-button {
+      font-family: Inter, sans-serif !important;
+      width: 124px;
+    height: 51px;
+    color: #FFFFFF;
+    background: #2A3647;
+    border-radius: 10px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 21px;
+    line-height: 120%;
+    margin-top: 14px;
+    margin-bottom: 14px;
+    margin-right: 25px;
+    border: none;
+    }
+  }
+
+
+  @media(min-width:900px) {
+    .header-popup {
+      display: none;
+    }
+
+    .vertical-line {
+      border-left: 1px solid #D1D1D1;  /* Die Dicke und Farbe der Linie anpassen */
+    height: 670px;  /* Höhe nach Bedarf anpassen */
+    width: 0;
+    }
+    
+
+    
     .wrapper {
       align-items: center;
     }
     .section-one {
       min-width: 300px;
       padding-right: 45px;
+      margin-bottom: 40px;
      }
   
      .section-two {
@@ -517,7 +684,7 @@
       position: relative;
      }
      .site-title {
-      width: 680px;
+      width: 100%
   }
   }
 
@@ -536,10 +703,14 @@
       padding-left: 45px;
      }
      .site-title {
-      width: 780px;
+      width: 100%
   }
+  
      
   }
+  #selected-contact {
+    display: flex;
+   }
 
   
 
