--- a/board.css
+++ b/board.css
@@ -328,7 +328,8 @@ body {
     transition: opacity 0.3s ease;
     display: flex;
     justify-content: center;
-    align-items: center;
+    overflow-y: auto;
+    
 
   }
   
@@ -342,10 +343,91 @@ body {
     opacity: 1;
   }
 
+  .popup-content::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5; /* Hintergrund des Scrollbars */
+}
+
+.popup-content::-webkit-scrollbar-thumb {
+    background-color: #888; /* Farbe des Scroll-Handles */
+    border-radius: 10px;
+    border: 3px solid #F5F5F5; /* Farbe des Scrollbar-Hintergrunds */
+}
+
+.popup-content::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Farbe des Scroll-Handles beim Überfahren mit der Maus */
+}
+
+.popup-content::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+
+.popup-content.scrolling {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+  /*---------------*/
+
+  @media (max-width: 900px) {
+    .popup-overlay.active {
+      background-color: transparent;
+    }
+    .popup-content {
+        background-color: #F5F5F5;
+        overflow-y: unset;
+    }
+  }
+  
+  @media (min-width: 321px) {
+    .popup-overlay {
+      background-color: rgba(0, 0, 0, 0.5);
+    }
+  }
+
+  /*------------------*/
+
+  @media (max-width: 900px) and (min-width: 280px) {
+    
+
+    
+    .popup-content {
+      position: fixed;
+      top: 80px; /* Höhe des Headers */
+      left: 0;
+      width: 100%;
+      height: calc(100% - 80px); /* Höhe des Fensters minus die Höhe des Headers */
+      transform: none; /* Keine Verschiebung */
+      z-index: 98;
+      border-radius: 0;
+      align-items: flex-start;
+      overflow-y: auto;
+    }
+
+    .popup-overlay.active {
+        top: 80px;
+    }
+    
+    
+
+    #burger-menu {
+        z-index: 9999999;
+    }
+
+    footer {
+        z-index: 0!important;
+    }
+    
+  }
+  
+
+  /*----------------*/
+
 
   @media(min-width:768px) {
     .popup-content {
-        width: 825px;
+        width: 100%;
     }
   }
 
