--- a/asssets/css/mobile-login.css
+++ b/asssets/css/mobile-login.css
@@ -166,6 +166,7 @@ h1 {
     width: 180px;
     height: 51px;
     cursor: pointer;
+    transition: 130ms;
 }
 
 .guest-btn {
@@ -180,6 +181,7 @@ h1 {
     height: 51px;
     border-radius: 8px;
     cursor: pointer;
+    transition: 130ms;
 }
 
 .fortgot-password-btn {
@@ -263,6 +265,13 @@ form {
     background: #2A3647;
     border-radius: 8px;
     cursor: pointer;
+    transition: 130ms;
+}
+
+.sign-up-container button:hover {
+    background-color: #29ABE2;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .outer-container {
@@ -291,12 +300,6 @@ form {
 .sign-in-headline {
     margin-top: -48px
 }
-
-/* .sign-up-container {
-    position: absolute;
-    top: 50vh;
-    z-index: 99;
-} */
 
 .sign-up-btn {
     margin-top: 20px;
@@ -348,6 +351,7 @@ form {
     header img {
         padding-top: 0;
     }
+
     .fedback-popup-container {
         position: absolute;
         top: 50vh;
@@ -370,6 +374,19 @@ form {
 
     .guest-btn-container {
         margin-top: 0;
+    }
+
+    .guest-btn:hover {
+        color: #29ABE2;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border: 2px solid #9747FF;
+        border-color: #29ABE2;
+    }
+
+    .login-btn:hover {
+        background-color: #29ABE2;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border: none;
     }
 
     .guest-login-container {
@@ -399,6 +416,12 @@ form {
         margin-top: -16px;
     }
 
+    .fortgot-password-btn:hover {
+        background-color: #29ABE2;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border: none;
+    }
+
     .input-field img {
         margin-right: 20px;
     }
@@ -426,6 +449,7 @@ form {
     .fortgot-password-btn {
         width: 264px;
         height: 51px;
+        transition: 130ms;
     }
 
     .forgot-input-outer-container {
@@ -470,15 +494,17 @@ form {
     .sign-up-container {
         margin-top: 60px;
     }
+
     .sign-up-container img {
         transition: transform 0.125s ease-in-out;
-        animation: slide-in 0.3s ;
+        animation: slide-in 0.3s;
     }
 
     @keyframes slide-in {
         0% {
             transform: translateY(50vh);
         }
+
         100% {
             transform: translateY(0);
         }
