--- a/asssets/css/add_task.css
+++ b/asssets/css/add_task.css
@@ -262,6 +262,10 @@ input[type="date"]::before {
   cursor: pointer;
 }
 
+.join-color{
+  background: #2A3647;
+}
+
 .orange{
   background: #FF7A00;
 }
