--- a/board.css
+++ b/board.css
@@ -192,6 +192,7 @@ body {
     margin-bottom: 22px;
     cursor: pointer;
     overflow: auto;
+    position: relative;
 }
 
 .highlight {
@@ -306,6 +307,22 @@ body {
     background-color: #e0e0e06d;
     border-radius: 30px;
 }
+
+.arrow-up, .arrow-down {
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    left: 56%;
+}
+
+.arrow-up {
+    top: 134px
+}
+
+.arrow-down {
+    bottom: 0;
+}
+
 
 
 /*----add-tast-popUp---------*/
