--- a/task-popUp.css
+++ b/task-popUp.css
@@ -86,12 +86,14 @@
 .bolder {
     font-weight: 700;
     margin-right: 25px;
+    font-size: 21px;
 }
 
 .popUp-date {
     margin-left: 33px;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 21px;
+    ;
 }
 
 .popUp-prio {
@@ -99,7 +101,7 @@
     align-items: center;
     margin-left: 33px;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 21px;
     margin-top: 35px;
 }
 
@@ -140,6 +142,8 @@
     display: flex;
     align-items: center;
     gap: 25px;
+    margin-left: 31px;
+    margin-bottom: 28px;
 }
 
 .assignedTo-iconE {
@@ -151,6 +155,10 @@
     width: 45px;
     height: 45px;
     color: #FFFFFF;
+}
+
+.assignedTo-name {
+    font-size: 21px;
 }
 
 .popUp-btns {
