--- a/board.css
+++ b/board.css
@@ -401,6 +401,15 @@ body {
     display: none;
 }
 
+.card-change-status{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.card-change-status span:hover{
+    font-weight: 800;
+}
+
   /*---------------*/
 
   @media (max-width: 900px) {
